Fixed another alignment issue

--- a/src/root.css
+++ b/src/root.css
@@ -4666,3 +4666,6 @@ body {
     margin-top: 100px;
   }
 }
+.profile-image-container1-home {
+  width: 100%;
+}
